# litebird_inflight_beam_cal

./: CHANGES.md  README.md  compute_fit.py  fake-jupiter.toml  fake-short.toml  far_sidelobe_beam_fit.py  jupiter_sed_ghz_k.csv  litebird-040GHz.toml  litebird-166GHz.toml  litebird-402GHz.toml  litebird-jupiter-040GHz.toml  litebird-scanning-strategy.toml  planck-030GHz.toml  planck-044GHz.toml  planck-070GHz.toml  planck-100GHz.toml  planck-353GHz.toml  planck-jupiter-044GHz.toml  planck-scanning-strategy.toml  pyproject.toml  requirements.txt  short-040GHz.toml  short-scanning-strategy.toml  simpletest.toml  simulate_scanning_strategy.py  symmetric_gaussian_beam_fit.py  test.toml
